--- a/GridMidi-Cpp-Windows.vcxproj.filters
+++ b/GridMidi-Cpp-Windows.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="RtMidi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\uberswitch\uberswitch.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
