--- a/GridMidi-Cpp-Windows.vcxproj
+++ b/GridMidi-Cpp-Windows.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="RtMidi.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GridMidi.h" />
     <ClInclude Include="include\uberswitch\uberswitch.hpp" />
     <ClInclude Include="RtMidi.h" />
   </ItemGroup>
