--- a/GridMidi-Cpp-Windows.vcxproj.filters
+++ b/GridMidi-Cpp-Windows.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="include\uberswitch\uberswitch.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GridMidi.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
